Memoria JBoss: ampliar valores por defecto con los mismos que los definidos en LibertyaEnvTemplate.properties